Fixed css for h1 alignment over top images; added code for viewport for mobile viewing

--- a/projects/css/style.css
+++ b/projects/css/style.css
@@ -6,12 +6,12 @@ table.center {
 th, td {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 12px;
-	padding: 8px;
+	padding: 5px;
 }
 
 th {
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	text-align: left;
 	background-color: #4CAF50;
 	position: sticky;
@@ -40,42 +40,27 @@ footer {
 	padding: 3px;
 	width: 100%;
 	background-color: #4CAF50;
-/*	align-items:center;*/
 	font-family: Helvetica, Arial, sans-serif;
 	text-align: center;
 	box-shadow: 0 -3px 2px -1px rgba(0, 0, 0, 0.4);
 }
 
+
+/*div classes*/
+
 .container {
 	position: relative;
-	text-align: center;
-	color: white;
-	width: 100%;
-	margin-left: auto; 
-	margin-right: auto;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 * {
 	box-sizing: border-box;
 }
 
-.column {
-	float: left;
-	width: 33.33%;
-	padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-	content: "";
-	clear: both;
-	display: table;
-}
-
 .centered {
-	position: relative;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
